# solitext

./: CHANGELOG.md  Cargo.toml
src/: cards.rs  draw.rs  game_logic.rs  game_state.rs  main.rs  selection.rs  tui.rs
src/draw/: card.rs  card_column.rs  common.rs  deck.rs  foundation.rs  game_state.rs  info.rs
